<resources>
    <string name="app_name">The movie DB</string>
    <string name="error_invalid_user_name">Invalid username</string>
    <string name="error_invalid_password">Invalid Password</string>
    <string name="error_password_required">Password required</string>
    <string name="error_invalid_user_name_or_password">Invalid username or password</string>
</resources>
